Added functionality to add copy&paste folders

--- a/src/app/mainpanel/mainsplitter/folders/folders.component.html
+++ b/src/app/mainpanel/mainsplitter/folders/folders.component.html
@@ -11,6 +11,7 @@
     [virtualScroll]="true"
     [virtualScrollItemSize]="48"
     [scrollHeight]="windowValues.height - 170 + 'px'"
+    [virtualScrollOptions]="{ scrollHeight: windowValues.height - 170 + 'px' }"
     [loading]="isLoading"
     [loadingIcon]="'pi pi-spin pi-spinner'"
     [loadingMode]="'icon'"
@@ -46,6 +47,7 @@
     [virtualScroll]="true"
     [virtualScrollItemSize]="48"
     [scrollHeight]="windowValues.height - 170 + 'px'"
+    [virtualScrollOptions]="{ scrollHeight: windowValues.height - 170 + 'px' }"
     [loading]="isLoading"
     [loadingIcon]="'pi pi-spin pi-spinner'"
     [loadingMode]="'icon'"
