--- a/src/app/mainpanel/mainsplitter/mainsplitter.component.html
+++ b/src/app/mainpanel/mainsplitter/mainsplitter.component.html
@@ -10,7 +10,7 @@
   }"
 >
   <ng-template pTemplate>
-    <app-folders></app-folders>
+    <app-folders #foldersRef ></app-folders>
   </ng-template>
 
   <ng-template pTemplate>
