--- a/src/app/mainpanel/mainpanel.component.html
+++ b/src/app/mainpanel/mainpanel.component.html
@@ -72,7 +72,7 @@
 
 <p-tabView #tabView>
     <p-tabPanel [header]="'Workspace'">
-        <app-mainsplitter></app-mainsplitter>
+        <app-mainsplitter #mainsplitterRef></app-mainsplitter>
     </p-tabPanel>
     <p-tabPanel [header]="'Languages'">
         TODO: Languages
