--- a/src/app/mainpanel/mainpanel.component.html
+++ b/src/app/mainpanel/mainpanel.component.html
@@ -43,7 +43,7 @@
       <input
         type="text"
         pInputText
-        placeholder="Search"
+        placeholder="Search Folders ..."
         [style]="{
           width: '100%',
           padding: '0.4rem 0.75rem',
