Able to load Snippets

--- a/src/app/mainpanel/mainsplitter/folders/folders.component.html
+++ b/src/app/mainpanel/mainsplitter/folders/folders.component.html
@@ -623,7 +623,7 @@
   <p-divider></p-divider>
   <p-floatLabel>
     <p-treeSelect
-      [placeholder]="'Select parent folder'"
+      [placeholder]="'Select folder'"
       [(ngModel)]="selectedNodeFolder"
       [options]="treeSelect"
       [containerStyle]="{ width: '100%' }"
@@ -645,7 +645,7 @@
       [scrollHeight]="'250px'"
     >
     </p-treeSelect>
-    <label> Parent Folder </label>
+    <label> Folder </label>
   </p-floatLabel>
 
   <p-footer>
