--- a/src/app/mainpanel/mainsplitter/snippets/snippets.component.html
+++ b/src/app/mainpanel/mainsplitter/snippets/snippets.component.html
@@ -1,1 +1,33 @@
-<p>snippets works!</p>
+<p-listbox
+    [(ngModel)]="selectedSnippet"
+    [options]="snippets"
+    [style]="{
+      height: '100%',
+      width: '100%',
+      border: '0px',
+      borderRadius: '0px',
+      overflow: 'auto',
+      fontSize: '14px',
+      fontWeight: 'bold'
+    }"
+    [scrollHeight]="windowValues.height - 105 + 'px'"
+    optionsLabel="Name"
+    filterBy="Name"
+    filterPlaceHolder="Search"
+    (onChange)="selectSnippet($event)"
+  >
+    <ng-template let-snippet pTemplate="item">
+      <div class="snippet-card">
+        <div class="snippet-title">
+          <p id="p1">{{ snippet.Title }}</p>
+          <p id="p2">({{ snippet.CreatedAt | date: 'shortDate' }})</p>
+        </div>
+        <div class="snippet-meta">
+          <span class="snippet-language">{{ snippet.LanguageName }}</span>
+          <span class="snippet-modifiedAt">
+            Last: {{ snippet.ModifiedAt | date: 'shortDate' }}
+          </span>
+        </div>
+      </div>
+    </ng-template>
+  </p-listbox>
