--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import 'primeng/resources/themes/saga-blue/theme.css';
+/* @import 'primeng/resources/themes/luna-amber/theme.css'; */
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 @import "primeng/resources/primeng.min.css";
