--- a/src/app/mainpanel/mainsplitter/snippets/snippets.component.html
+++ b/src/app/mainpanel/mainsplitter/snippets/snippets.component.html
@@ -34,4 +34,5 @@
 
   <p-contextMenu #listBoxCm [model]="cmItems" [style]="{fontSize: '14px'}"></p-contextMenu>
   <p-toast position="bottom-right" key="br"></p-toast>
+  <p-confirmDialog />
 
