--- a/src/app/mainpanel/mainsplitter/editor/editor.component.html
+++ b/src/app/mainpanel/mainsplitter/editor/editor.component.html
@@ -1,1 +1,7 @@
-<p>editor works!</p>
+<div [style]="{ height: '100vh'}">
+    <ngx-monaco-editor
+      [style]="{ height: '100%'}"
+      [options]="editorOptions"
+      [(ngModel)]="code">
+    </ngx-monaco-editor>
+</div>
